# rocket-code-2020

./: .Radio_UART_test.swp  .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  File_Writer.cpp  LICENSE.md  LogFile.txt  Logger.cpp  QueueOfStruct.cpp  README.md  Radio_UART_test  Radio_UART_test.c  SparkFunMPL3115A2.cpp  SparkFunMPL3115A2.h  UART_example.c  UART_wiringpi  UART_wiringpi.c  blink  blink.c  build-and-run.sh  build-arm.sh  build-boost-arm.sh  build-libi2c.sh  build.sh  conanfile.txt  config  format-code.sh  install-conan.sh  install-dependencies.sh  led_blink  led_blink.c  run.sh  selectProject.sh  servoMotors.c  toolchain-rpi.cmake  unitTest.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: arduino_build.yml  build.yml  end-to-end.yml  format.yml  unit_tests.yml
arduino/: .gitignore  README.md  platformio.ini  protobuild.py
arduino/include/: digitalMessage.h  main.h  persistentInit.h  servoMessage.h  utils.h
arduino/src/: digitalMessage.cpp  main.cpp  persistentInit.cpp  servoMessage.cpp
arduino/src/main/: main.ino
arduino/src/main.ino/: main.ino.ino
control/: README.md  disable.sh  enable.sh  start.sh  status.sh  stop.sh
control/service/: rocket_startup.service
groundStationSoftware/arduino/: arduino.ino
groundStationSoftware/arduino/switch_bank/: switch_bank.ino
groundStationSoftware/socket/: client.cpp  pyServer.py
libraries/: CMakeLists.txt
libraries/mavlink/: CMakeLists.txt  generate.sh
libraries/sbgECom/doc/: ._sbgECom Library.chm  sbgECom Library.chm
libraries/sbgECom/doc/html/: dir_1780b86f42d95145b58d58fd2a9bdf65.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_c.html  functions_d.html  functions_f.html  functions_h.html  functions_i.html  functions_l.html  functions_n.html  functions_p.html  functions_s.html  functions_t.html  functions_u.html  functions_vars_b.html  functions_vars_c.html  functions_vars_e.html  functions_vars_g.html  functions_vars_h.html  functions_vars_i.html  functions_vars_m.html  functions_vars_o.html  functions_vars_s.html  functions_vars_y.html  globals_defs.html  globals_eval.html  globals_func.html  globals_s.html  sbg_e_can_id_8h_source.html  sbg_e_com_8h.html  sbg_e_com_8h_source.html  sbg_e_com_binary_log_debug_8h.html  sbg_e_com_binary_log_debug_8h_source.html  sbg_e_com_binary_log_dvl_8h.html  sbg_e_com_binary_log_dvl_8h_source.html  sbg_e_com_binary_log_ekf_8h_source.html  sbg_e_com_binary_log_gps_8h.html  sbg_e_com_binary_log_imu_raw_8h.html  sbg_e_com_binary_log_imu_raw_8h_source.html  (+60 more)
libraries/sbgECom/src/binaryLogs/: sbgEComBinaryLogs.h
libraries/sbgECom/src/commands/: sbgEComCmdCommon.h  sbgEComCmdOutput.h
libraries/sbgECom/src/commands/transfer/: sbgEComTransfer.h
projects/HotFire/: UOStateMachine.cpp  UOStateMachine.h  config.h
projects/HotFire/config/: GpioConfig.h  UOStateMachine.cpp  UOStateMachine.h  config.h
projects/HydrostaticTest/config/: UOStateMachine.h
projects/OctoberSky1/: UOStateMachine.cpp  UOStateMachine.h  config.h
projects/OctoberSky1/config/: UOStateMachine.cpp  UOStateMachine.h  config.h
projects/ServoControl/config/: UOStateMachine.cpp  UOStateMachine.h
protobuf/: ArduinoComm.options  ArduinoComm.proto  CMakeLists.txt  rocket.proto
sbgECom/doc/html/: ._files.html  annotated.html  classes.html  dir_5903c71b979204ea1ce2d27420efeaa9.html  dir_5e80d29b61c444378a543be4dd1414df.html  dir_ca88af47f35d3caa830e81530084c4b9.html  functions_b.html  functions_e.html  functions_g.html  functions_m.html  functions_o.html  functions_q.html  functions_r.html  functions_v.html  functions_vars.html  functions_vars_d.html  functions_vars_f.html  functions_vars_l.html  functions_vars_n.html  functions_vars_p.html  functions_vars_q.html  functions_vars_r.html  functions_vars_t.html  functions_vars_u.html  globals.html  (+53 more)
sbgECom/projects/unix/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
sbgECom/src/: HotFire.cpp  HotFire.h  Interface.cpp  Interface.h  ReadSensors.cpp  Rocket.cpp  Rocket.h  RocketSM.cpp  RocketSM.h  StateMachine.h  rocketState.h
src/IO/: ArduinoEncoder.h  ArduinoProxy.cpp  ArduinoProxy.h  EventQueue.cpp  EventQueue.h  Gpio.cpp  Gpio.h  GroundStationComm.cpp  GroundStationComm.h  GroundStationEncoder.h  GroundStationTCPComm.cpp  GroundStationTCPComm.h  IO.cpp  IO.h  Input.cpp  Input.h  Interface.cpp  Interface.h  InterfaceImpl.cpp  InterfaceImpl.h  Logger.cpp  Logger.h  Output.cpp  Output.h  PwmOutput.cpp  PwmOutput.h  Radio.cpp  Radio.h  SBGSensor.cpp  SBGSensor.h  SMBus.cpp  SMBus.h  SPI.cpp  SPI.h  SensorLogger.cpp  SensorLogger.h  SensorSuite.cpp  SensorSuite.h  Sensors.cpp  Sensors.h  (+6 more)
src/Quaternions/: QuaternionHelper.cpp  QuaternionHelper.h
src/arduino/: DCMotorState.h  StepperMotorState.h
src/common/: FileLogFormatter.h  environment.h  pch.h  types.h  utils.cpp  utils.h
src/data/: GpioData.h  SBGData.h  SensorState.h  SensorSuiteState.h  SensorsData.cpp  SensorsData.h  StateData.cpp  StateData.h  UOSMData.h  sensorsData.cpp  sensorsData.h
src/helpers/: Helper.cpp  Helper.h  Types.h
src/init/: MainLoop.cpp
src/interface/: Interface.h  InterfaceImpl.cpp  InterfaceImpl.h  TestingInterface.cpp  TestingInterface.h
src/sensors/: MAX31865.cpp  MAX31865.h
src/stateMachine/: InterfacingStateMachine.cpp  InterfacingStateMachine.h
src/stateMachineLib/: DataTypes.h  Fault.cpp  Fault.h  StateMachine.cpp  StateMachine.h  stdafx.h  targetver.h
state_machine/: Fault.h  Main.cpp  ReadSensors.cpp  ReadSensors.h  RocketSM.cpp  SensorsRead.cpp  StateMachine.cpp  StateMachine.h  compile.txt  main_flight_loop  main_flight_loop.cpp  test1
state_machine/thread_test/: Main.cpp  SensorsRead.cpp  SensorsRead.h
tests/hotfire/: input.txt  run_test.sh
tests/octoberSky/: fix-input.py  run_test.sh
tests/tools/: combine.py
unitTesting/: CMakeLists.txt  arduinoEncoderDecoder.cpp  groundStationEncoderDecoder.cpp  helper.cpp  main.cpp  test.cpp
unitTesting/IO/: EventQueue.cpp
working/: cross-compile-paths.sh
(+614 files in other folders)
